syntax = "proto3";

import "renderer/snapshot.proto";
import "settings/snapshot.proto";
import "ui/snapshot.proto";

package game_output;

message GameOutputMessage {
    optional renderer.RendererSnapshot renderer = 1;
    optional settings.SettingsSnapshot settings = 2;
    optional ui.UiSnapshot ui = 3;
}

// Forward proto types
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
import "google/protobuf/type.proto";