syntax = "proto3";

import "settings/assets.proto";
import "settings/window.proto";

package settings;

message SettingsSnapshot {
    optional Assets assets = 1;
    optional Window window = 2;
}